--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -1,14 +1,17 @@
 .hamburger:hover > div:nth-child(1){
   background-color: ghostwhite;
   animation-name: top;
-  animation-duration: 1s;
+  animation-duration: 2.0s;
   animation-fill-mode: forwards;
+  transform: translate(0%, 325%) rotate(45DEG);
+  transition-duration: 1S;
 }
 
 .hamburger:hover > div:nth-child(2){
   animation-name: middle;
   animation-duration: .1s;
   animation-fill-mode: forwards;
+  background: mediumvioletred;
 }
 
 .hamburger:hover > div:nth-child(3){
@@ -16,6 +19,8 @@
   animation-name: bottom;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+  transform: translate(0%, -325%) rotate(-45DEG);
+  transition-duration: 1S;
 }
 
 nav {
